--- a/pom.xml
+++ b/pom.xml
@@ -16,23 +16,21 @@
     <java.version>1.8</java.version>
   </properties>
   <dependencies>
-
-  <dependency>
-    <groupId>org.webjars</groupId>
-    <artifactId>bootstrap</artifactId>
-    <version>4.0.0</version>
-  </dependency>
-  <dependency>
-    <groupId>org.webjars</groupId>
-    <artifactId>jquery</artifactId>
-    <version>3.0.0</version>
-  </dependency>
-  <dependency>
-    <groupId>org.webjars.bower</groupId>
-    <artifactId>bootbox.js</artifactId>
-    <version>4.4.0</version>
-  </dependency>
-
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>bootstrap</artifactId>
+      <version>4.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>jquery</artifactId>
+      <version>3.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.webjars.bower</groupId>
+      <artifactId>bootbox.js</artifactId>
+      <version>4.4.0</version>
+    </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -70,6 +68,11 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-devtools</artifactId>
       <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-rest</artifactId>
+      <scope>compile</scope>
     </dependency>
   </dependencies>
   <build>
