--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
       <artifactId>spring-boot-starter-data-rest</artifactId>
       <scope>compile</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
